# Jarvis

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  FINAL_SUMMARY.txt  GUI_GUIDE.md  GUI_IMPLEMENTATION.md  GUI_REDESIGN_COMPLETE.txt  GUI_STATUS.txt  INDEX.md  LAUNCH_CHECKLIST.md  Makefile  QUICKSTART.md  README.md  README_NEW.md  jarvis.py  jarvis.py.bak  jarvis_gui.py  launcher.py  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  run.py  run_jarvis.py  setup.py  start_gui.py  test_imports.py  verify_setup.py
docs/archive/: CODEBASE_CLEANUP.md  CODE_ORGANIZATION.md  DIRECTORY_GUIDE.md  FEATURES.md  FUTURISTIC_GUI_GUIDE.md  FUTURISTIC_SHOWCASE.txt  GUI_REDESIGN_UPDATE.md  PROJECT_STRUCTURE.md  READY_TO_LAUNCH.md  REDESIGN_DOCUMENTATION_INDEX.md  REDESIGN_SUMMARY.md  SETUP_GUIDE.md  START_HERE.md  jarvis_main_legacy.py
jarvis/: __init__.py  __main__.py  launcher.py
jarvis/core/: __init__.py  assistant.py
jarvis/ui/: __init__.py  futuristic_gui.py
jarvis/utils/: __init__.py
scripts/: run_jarvis.py  start_gui.py  verify_setup.py
tests/: test_imports.py
