[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "jarvis-ai"
version = "2.0.0"
description = "Advanced AI Voice Assistant with Futuristic GUI"
readme = "README.md"
requires-python = ">=3.7"
license = {text = "MIT"}
authors = [
    {name = "Developer", email = "dev@example.com"}
]
keywords = ["ai", "voice", "assistant", "gui", "automation"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX",
    "Operating System :: MacOS",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Topic :: Multimedia :: Sound/Audio :: Speech",
    "Topic :: System :: Systems Administration",
]

dependencies = [
    "SpeechRecognition>=3.8.1",
    "pyttsx3>=2.90",
    "python-dotenv>=0.19.0",
    "psutil>=5.8.0",
    "pygetwindow>=0.0.8",
    "pyautogui>=0.9.53",
]

[project.optional-dependencies]
dev = [
    "pytest>=6.0",
    "pytest-cov>=2.12",
    "black>=21.0",
    "flake8>=3.9",
    "mypy>=0.910",
    "isort>=5.9",
]

[project.urls]
Homepage = "https://github.com/yourusername/jarvis"
Documentation = "https://github.com/yourusername/jarvis/wiki"
Repository = "https://github.com/yourusername/jarvis.git"
Issues = "https://github.com/yourusername/jarvis/issues"

[project.scripts]
jarvis = "jarvis.launcher:main"

[tool.setuptools]
packages = ["jarvis", "jarvis.core", "jarvis.ui", "jarvis.utils"]

[tool.black]
line-length = 100
target-version = ["py37"]
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 100

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "--cov=jarvis --cov-report=html --cov-report=term-missing"

[tool.coverage.run]
source = ["jarvis"]
omit = ["*/tests/*"]

[tool.mypy]
python_version = "3.7"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
